 * User Interface:
   * Various design improvements to GUI2 widgets
   * New simpler GUI2 loading screen
   * New colored cursor graphics
   * Fixed Observers icon appearing behind other top bar items in MP games on
     horizontal UI resolutions < 1024 (bug #24455).
   * Fixed ToD schedule progress indicator appearing behind other top bar items
     on vertical UI resolutions < 600.
 * WML engine:
   * Fix some issues with [foreach]
   * Fix some issues with backstab-like weapon specials
   * Support [effect]times=<integer>
   * Add highlight=yes|no to [scroll_to], [scroll_to_unit], [message]
     Defaults to no in the first two cases, yes in the third
     If yes, the target hex is outlined.
   * New ~SCALE_INTO(w,h) IPF which preserves aspect ratio, using bilinear
     interpolation scaling.
   * New ~SCALE_INTO_SHARP(w,h) IPF which preserves aspect ratio, using
     nearest neighbor scaling.
   * Support delayed_variable_substitution= in [on_undo], [on_redo]
     Note that this means $unit.x and $unit.y may not reflect the unit's
     true location, so using [unstore_unit] on $unit may have unexpected effects.
     This applies to $second_unit too. The $x1, $y1, $x2, $y2 variables work fine
     though, so in most cases they can be used instead. Anything else in $unit
     or $second_unit is also fine.
   * formula= in SUF can now reference $other_unit via the formula variable "other"
   * formula= now supported in location, side, and weapon filters
   * Weapon filters now support number, parry, accuracy, and movement_used
   * New [has_attack] in standard unit filters; supercedes has_weapon= and
     uses full weapon filter.
   * lua_function=var.member now works in SUF; however, 'var' still needs to
     be a global variable.
   * Added new keys name_generator, male_name_generator and female_name_generator
     for the [race] tag to declare a context-free grammar to describe how names
     are derived