@@ -20,6 +20,8 @@ Version 1.13.4+dev:
      horizontal UI resolutions < 1024 (bug #24455).
    * Fixed ToD schedule progress indicator appearing behind other top bar items
      on vertical UI resolutions < 600.
+   * Improved the dialog for choosing what to do when a player leaves in
+     multiplayer.
  * WML engine:
    * Fix some issues with [foreach]
    * Fix some issues with backstab-like weapon specials
